ui/client-react/src/components/app/appHomePage.scss
@import '../../assets/css/qbVariables';

.appHomePageContainer {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;

    .layout-stage {
        flex: 0 0 auto;

        .appName {
            padding-left: 5px;
        }
    }

    .app-content {
        flex: 1 1 auto;
        padding: 0 10px;
    }
    .secondaryBar {
        flex: 0 0 auto;
    }
}

.appHomePage {
    background-color: $color-blue-200;
    flex-direction: column;
    flex: 1;
    height: 100%;
    overflow: auto;
    padding: 20px;

    .appHomePageWidthConstraint {
        max-width: 1200px;
        min-width: 670px;
        margin: auto;

        @include small-breakpoint {
            min-width: initial;
        }
    }

    @include small-breakpoint {
        padding: 20px;
    }

    h2, h3 {
        margin-top: 0;
    }

    .homePanel {
        background-color: $color-black-100;
        border: 1px solid $color-cyan-600;
        padding: 10px 30px;
        margin-bottom: 20px;
    }

    .bottomSubPanel {
        padding: 10px;
    }

    .topPanel {
        display: flex;

        @include small-breakpoint {
            flex-direction: column;
        }

        h2 {
            margin-top: 8px;
        }

        .topPanelContent {
            flex-basis: 65%;
            margin-right: 40px;

            @include small-breakpoint {
                flex-basis: auto;
                margin-right: 0;
            }
        }

        .topPanelLinks {
            display: flex;
            flex-direction: column;
            margin-top: 20px;

            .linkWithImage {
                display: flex;
                align-items: center;
                justify-content: left;
                margin-bottom: 10px;

                img {
                    height: 40px;
                    margin-right: 10px;
                }
            }

            .qbIcon {
                font-size: 40px;
                margin-right: 5px;
            }
        }

        .launchTourImage {
            content: url("Launch-tour.png");
        }

        .guideMeImage {
            content: url("Guide-me.png");
        }
    }

    .mainPanel {
        display: flex;
        text-align: center;

        @include small-breakpoint {
            flex-direction: column;
        }

        .content {
            display: flex;
            flex-direction: column;
        }

        h4 {
            align-self: center;
        }

        img {
            max-width: 100%;
        }

        .leftContent p, .rightContent p {
            margin-top: 20px;
        }

        .leftContent {
            flex-basis: 50%;
            margin-right: 20px;

            @include small-breakpoint {
                flex-basis: auto;
                margin-right: 0;
                margin-bottom: 30px;
            }

            .welcomeGuideImage {
                content: url("Welcome-guide.png");
            }
        }

        .rightContent {
            align-items: center;
            flex-basis: 50%;

            @include small-breakpoint {
                flex-basis: auto;
            }


            .giveFeedbackImage {
                content: url("GiveFeedback.png");
            }
        }

        .btn {
            align-self: center;
            background-color: $color-indigo-700;
            border-radius: 0;
            margin-bottom: 20px;
            margin-top: 10px;

            &.btn-feedback {
                padding-left: 40px;
                padding-right: 40px;
            }

            small {
                font-size: 70%;
            }
        }
    }

    .bottomPanel {
        display: flex;

        @include small-breakpoint {
            flex-direction: column;
        }

        .leftBottomPanel, .rightBottomPanel {
            flex-basis: 50%;

            @include small-breakpoint {
                flex-basis: auto;
            }
        }

        .leftBottomPanel, .rightBottomPanel {
            display: flex;
        }

        .leftBottomPanel {
            margin-right: 20px;

            @include small-breakpoint {
                margin-right: 0;
            }
        }

        .rightBottomPanel {
            padding-bottom: 0;
        }

        .leftBottomPanelContent, .rightBottomPanelContent {
            margin-top: 10px;
            margin-left: 10px;
        }

        .rightBottomPanelContent {
            @include small-breakpoint {
                padding-bottom: 10px;
            }
        }

        .homePageTipImage {
            content: url("Tip.png");
        }

        .homePageHelpImage {
            content: url("Need-help.png");
            margin-left: 20px;
            margin-right: 20px;
        }

        .supportEmail {
            display: flex;
            align-items: center;

            .qbIcon {
                color: $color-blue-500;
                font-size: 20px;
                margin-right: 5px;
            }

            .supportEmailText {
                margin-bottom: 0;
            }
        }
    }

}

